// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render count and info correctly for a single expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $0.15
    .
  </h3>
</div>
`;

exports[`should render count and total info correctly for multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    5
     
    expenses
     totalling 
    $1.65
    .
  </h3>
</div>
`;
